<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/expand_button"
        android:title="@string/expand_routes"
        android:icon="@drawable/expand_arrow"
        android:visible="false"
        android:textSize="20sp"
        app:showAsAction="always"
        app:actionViewClass="android.widget.Spinner"/>
    <item android:id="@+id/list_routes_btn"
        android:title="@string/action_search"
        android:icon="@drawable/bus_white"
        android:visible="false"
        app:showAsAction="always"
        app:actionViewClass="android.widget.Spinner"/>
    <item
        android:id="@+id/action_show_notification_single"
        android:orderInCategory="100"
        android:title="@string/action_show_notification_single"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_notification"
        android:orderInCategory="100"
        android:title="@string/action_show_notification"
        android:visible="false"
        app:showAsAction="never" />
</menu>
