<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:orientation="vertical"
    android:padding="16dp"
    app:theme="@style/AppTheme.Form"
    tools:context="br.edu.ufcg.analytics.meliorbusao.fragments.ChangePasswordFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/hintDisableTextColorDark">

        <AutoCompleteTextView
            android:id="@+id/old_password_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_old_password"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/textSecondaryColorDark"
            android:textColorHint="@color/hintDisableTextColorDark" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/hintDisableTextColorDark">

        <AutoCompleteTextView
            android:id="@+id/new_password_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_new_password"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/textSecondaryColorDark"
            android:textColorHint="@color/hintDisableTextColorDark" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/hintDisableTextColorDark">

        <AutoCompleteTextView
            android:id="@+id/confirm_new_password_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_confirm_new_password"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/textSecondaryColorDark"
            android:textColorHint="@color/hintDisableTextColorDark" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save_changes_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/action_save_new_password"
        android:textColor="@color/textPrimaryColorLight"
        android:textStyle="bold" />


</LinearLayout>
