<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.ufcg.analytics.meliorbusao.fragments.RatingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rating_route_card"
        android:weightSum="5">

        <LinearLayout
            android:id="@+id/rota_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="ROTA"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/fragment_rating_route_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="263B"
                android:textColor="@android:color/black"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblevaluation"
                    android:textSize="20sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/fragment_rating_lotado_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbllotado"
                    android:textSize="20sp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/fragment_rating_motoristaok_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblmotorista"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/fragment_rating_conditionOK_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblcondition"
                    android:textSize="20sp" />
            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_weight="1">

                <Button
                    android:id="@+id/fragment_rating_rate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="storeRate"
                    android:text="@string/lbltext"
                    android:layout_gravity="center_horizontal"
                    />

        </LinearLayout>


    </LinearLayout>

</FrameLayout>
